--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "cheerio": "^1.0.0-rc.3",
+    "cli-table3": "^0.5.1",
     "minimist": "^1.2.0",
     "node-fetch": "^2.6.0"
   }
